solved email text-wrap problem

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -54,6 +54,10 @@
 	color: var(--color-light);
 }
 
+.text-wrap {
+	word-wrap: break-word;
+}
+
 /* =================== FORM ======================= */
 form {
 	display: flex;
